src/objects/Document_Schema__c.object
<CustomObject>
    <fields>
        <fullName>Click_Loans_Document_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Document Master</label>
        <referenceTo>Document_Master__c</referenceTo>
        <relationshipLabel>Document Schema</relationshipLabel>
        <relationshipName>Document_Schema</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Loans_Required_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Click Loans Required Document</label>
        <referenceTo>Required_Document__c</referenceTo>
        <relationshipLabel>Document Schema</relationshipLabel>
        <relationshipName>Document_Schema</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Display_Name__c</fullName>
        <label>Field Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Schema</label>
    <nameField>
        <label>Document Schema Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Schemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>